package be.isims.ihm.dp.tp4.ex6.code;

public interface Observer {
    void update(String value, String operation);
}
