@startuml

title __CODE's Class Diagram__\n

  namespace be.isims.ihm.dp.tp4.ex6.code {
    abstract class be.isims.ihm.dp.tp4.ex6.code.AbstractController {
        + AbstractController()
        {abstract} + notification()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    abstract class be.isims.ihm.dp.tp4.ex6.code.AbstractModel {
        {abstract} + getTemperature()
        + setObserver()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    class be.isims.ihm.dp.tp4.ex6.code.ConcreteController {
        + ConcreteController()
        + notification()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    class be.isims.ihm.dp.tp4.ex6.code.Main {
        {static} + main()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    interface be.isims.ihm.dp.tp4.ex6.code.Observer {
        {abstract} + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    class be.isims.ihm.dp.tp4.ex6.code.TemperatureModel {
        + getTemperature()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    class be.isims.ihm.dp.tp4.ex6.code.ViewFrm {
        - controls : JButton[]
        - font : Font
        - temperature : JTextField
        + ViewFrm()
        + initUI()
        + update()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    class be.isims.ihm.dp.tp4.ex6.code.ViewFrm.ButtonListener {
        + actionPerformed()
    }
  }
  

  namespace be.isims.ihm.dp.tp4.ex6.code {
    class be.isims.ihm.dp.tp4.ex6.code.ViewFrm.Display {
        - temperatureDisplay : JLabel
        + Display()
        + initUI()
        + setContent()
    }
  }
  

  be.isims.ihm.dp.tp4.ex6.code.AbstractController o-- be.isims.ihm.dp.tp4.ex6.code.AbstractModel : model
  be.isims.ihm.dp.tp4.ex6.code.AbstractModel o-- be.isims.ihm.dp.tp4.ex6.code.Observer : observer
  be.isims.ihm.dp.tp4.ex6.code.ConcreteController -up-|> be.isims.ihm.dp.tp4.ex6.code.AbstractController
  be.isims.ihm.dp.tp4.ex6.code.TemperatureModel -up-|> be.isims.ihm.dp.tp4.ex6.code.AbstractModel
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm .up.|> be.isims.ihm.dp.tp4.ex6.code.Observer
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm -up-|> javax.swing.JFrame
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm o-- be.isims.ihm.dp.tp4.ex6.code.AbstractController : controller
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm o-- be.isims.ihm.dp.tp4.ex6.code.ViewFrm.Display : display
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm +-down- be.isims.ihm.dp.tp4.ex6.code.ViewFrm.ButtonListener
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm +-down- be.isims.ihm.dp.tp4.ex6.code.ViewFrm.Display
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm.ButtonListener .up.|> java.awt.event.ActionListener
  be.isims.ihm.dp.tp4.ex6.code.ViewFrm.Display -up-|> javax.swing.JFrame


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
